--- a/css/header.css
+++ b/css/header.css
@@ -22,7 +22,7 @@ ul {
     display: flex;
     list-style: none;
     font-size: 30px;
-    font-family: Roboto, Arial;
+    font-family: Roboto, Arial, sans-serif;
     color: white;
 }
 
