--- a/css/body.css
+++ b/css/body.css
@@ -250,6 +250,7 @@ div#faq_body {
     background-image: url("../accets/background/body_games.png");
     padding: 10px 0;
     position: relative;
+    min-height: 750px;
 }
 
 #form {
@@ -265,8 +266,8 @@ input {
     border: 2px solid gray;
     border-radius: 5px 0 0 5px;
     background: aliceblue;
-    width: 530px;
-    height: 60px;
+    width: 515px;
+    height: 53px;
     padding-left: 10px;
     font-size: 23px;
     font-family: "Roboto", sans-serif;
@@ -289,6 +290,16 @@ input {
     font-family: "Roboto Medium", sans-serif;
 }
 
+#button_for_turn_back img{
+    position: absolute;
+    left: 495px;
+    width: 25px;
+    height: 25px;
+    margin: auto 0;
+    top: 18px;
+
+}
+
 #button_search_items {
     display: flex;
     justify-content: center;
@@ -304,8 +315,8 @@ input {
     opacity: 0.9;
     margin: 0 auto;
     width: 1000px;
-    height: 1264px;
-    padding: 0 100px;
+    /*height: 1264px;*/
+    padding: 0 100px 15px 100px;
 }
 
 .line_question {
@@ -334,8 +345,7 @@ input {
 }
 
 
-
-#faq_questions div a {
+.faq_questions_text {
     font-size: 20px;
     font-family: "Roboto Medium", sans-serif;;
     color: rgb(44, 45, 55);
@@ -349,6 +359,17 @@ input {
     display: block;
 }
 
+.faq_questions_answers p{
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;;
+    color: rgb(44, 45, 55);
+    line-height: 1.2;
+    text-align: left;
+    margin: 20px 0;
+}
+
+/*
 #faq_questions div a:hover:not(.header) {
     background-color: #eee;
-}
+}*/
+
