--- a/css/body.css
+++ b/css/body.css
@@ -46,7 +46,7 @@
     font-family: "Roboto Black", sans-serif;
     letter-spacing: 2px;
     font-size: 50px;
-    padding: 25px;
+    padding: 15px;
     text-align: center;
     text-shadow: 2px 2px 3px black;
     color: white;
@@ -60,7 +60,7 @@
     background-image: url("../accets/body/background_main_body.png");
     display: inline-flex;
     margin: 0 auto;
-    padding: 20px 60px;
+    padding: 20px 200px;
     flex-wrap: wrap;
     /*Св-во wrap отвечает за отображение элементов внутри флекс блока*/
     justify-content: center;
@@ -68,8 +68,9 @@
 }
 
 .best_games_catalog {
-    width: 414px;
-    height: 515px;
+    position: relative;
+    width: 360px;
+    height: 430px;
     background-color: #2c2d37;
     margin: 20px;
     text-align: center;
@@ -128,8 +129,11 @@ div#games_section {
 }
 
 .games_catalog {
-    width: 386px;
-    height: 644px;
+    position: relative;
+/*    width: 386px;*/
+    width: 360px;
+/*    height: 644px;*/
+    height: 600px;
     background-color: #2c2d37;
     margin: 20px 5px;
     text-align: center;
@@ -137,79 +141,115 @@ div#games_section {
 
 .img_all_games {
     display: block;
-    margin: 5px auto 5px;
+    margin: 5px auto 0;
 }
 
 .games_text {
+    position: absolute;
+    bottom: 75px;
+    left: 15px;
     display: inline-block;
     color: white;
     text-shadow: 1px 1px 2px black;
     text-align: left;
     width: 310px;
-    padding: 15px 10px 10px 10px;
+    padding: 0 10px 5px 10px;
 }
 
 .games_text_headline {
     font-size: 25px;
     font-family: "Roboto Medium", sans-serif;
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .price_line {
     float: left;
-    margin: 20px 0 10px 0;
+    margin-top: 3px;
 }
 
-.games_text_old_price, .games_text_price {
-    margin: 20px 0 0 10px;
-}
 .games_text_old_price {
-    float: left;
+    display: inline-block;
     font-family: "Roboto Medium", sans-serif;
-    font-size: 30px;
+    font-size: 27px;
     color: #807f80;
     text-decoration: line-through;
-    padding: 0 20px 0 0;
+    margin-top: 5px;
+    margin-left: 10px;
 }
 
 .games_text_price {
+    display: block;
     font-family: "Roboto Medium", sans-serif;
-    font-size: 30px;
+    font-size: 27px;
+    margin: 5px 0 10px 25px;
 }
 
 .games_text_discount {
-    margin: 5px 0 20px 25px;
+    display: inline-block;
+    margin-left: 25px;
     font-family: "Roboto", sans-serif;
-    font-size: 25px;
+    font-size: 27px;
     color: #c99d11;
 }
 
 .games_text_description {
-    float: left;
-    font-size: 19px;
+    display: block;
+    font-size: 17px;
     font-family: "Roboto", sans-serif;
     color: #807f80;
 }
 
-.games_text_price_no_sale {
-    margin: 35px 0 40px 25px;
-    font-family: "Roboto Medium", sans-serif;
-    font-size: 30px;
-}
+.games_text_new_price {
+     margin: 25px 0 25px 25px;
+     font-family: "Roboto Medium", sans-serif;
+     font-size: 28px;
+ }
+
 
 .games_text_description_no_sale {
-    float: left;
-    font-size: 19px;
+    font-size: 17px;
     font-family: "Roboto", sans-serif;
     color: #807f80;
+}
+
+.games_buttons {
+    position: absolute;
+    bottom: 0;
+    left: 60px;
+    display: block;
+    margin: 10px auto;
+    text-align: center;
+}
+
+.games_button_info, .games_button_buy{
+    display: inline-block;
+    margin: 8px;
+    font-family: "Roboto Medium", sans-serif;
+    font-size: 18px;
+    color: white;
+    background-color: transparent;
+    padding: 7px 30px;
+    outline: none;
+    border: 2px solid white;
+    border-radius: 1px;
+    transition: 0.2s;
+}
+.games_button_info:hover, .games_button_buy:hover {
+    border: 2px solid #e9b606;
+    color: #e9b606;
+}
+
+.games_button_buy {
+    padding: 7px 33px;
 }
 
 .block_video_review {
     background-color: rgb(44, 45, 55);
-    width: 1495px;
-    height: 477px;
+    max-width: 1000px;
+    max-height: 320px;
+    min-width: 650px;
     margin: 20px auto;
-    padding: 0 35px;
     display: flex;
     align-items: center;
     /*justify-content: center;*/
@@ -217,13 +257,15 @@ div#games_section {
 
 .video {
     box-shadow: 0 0 10px black;
+    min-width: 400px;
 }
 
 .block_video_text {
     margin: auto 70px;
-    width: 550px;
+    width: 450px;
     /*height: 400px;*/
-    font-size: 50px;
+    min-width: 150px;
+    font-size: 25px;
     font-family: "Roboto Medium", sans-serif;
     color: white;
 }
@@ -241,7 +283,7 @@ div#games_section {
 }
 
 .video_description {
-    font-size: 22px;
+    font-size: 18px;
     font-family: "Roboto", sans-serif;
     color: #807f80;
 }
@@ -462,7 +504,6 @@ div#faq_body {
     border: 1px solid red;
 }
 
-
 .error_empty {
     display: none;
 }
@@ -473,4 +514,66 @@ div#faq_body {
     padding-left: 15px;
     font-family: "Roboto", sans-serif;
     font-size: 17px;
+}
+
+div#card_body {
+    background-image: url("../accets/background/body_games.png");
+    padding-bottom: 10px;
+    position: relative;
+    min-height: 750px;
+}
+
+#card_block {
+    /*border-radius: 10px;*/
+    background-color: rgb(255, 255, 255);
+    opacity: 0.9;
+    margin: 0 auto;
+    width: 1000px;
+    /*height: 1264px;*/
+    padding: 0 100px 15px 100px;
+}
+
+.headline_left {
+    font-family: "Roboto Black", sans-serif;
+    font-size: 50px;
+    padding: 25px 0 20px 0;
+    text-align: left;
+    color: #3b393e;
+}
+
+.order_inform_block {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+}
+
+.order_inform {
+    font-size: 20px;
+    font-family: "Roboto Medium", sans-serif;
+    font-weight: 600;
+    color: rgb(44, 45, 55);
+    line-height: 1.2;
+    padding-right: 18px;
+    text-decoration: none;
+}
+
+.text_price_left {
+    text-align: right;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: "Roboto Medium", sans-serif;
+    color: rgb(44, 45, 55);
+    line-height: 1.2;
+    padding-top: 20px;
+}
+
+.game_order_block {
+    /*border-radius: 10px;*/
+    background-color: rgb(255, 255, 255);
+    opacity: 0.9;
+    margin: 0 auto;
+    width: 1000px;
+    /*height: 1264px;*/
+    padding: 0 100px 20px 100px;
 }
