--- a/css/header.css
+++ b/css/header.css
@@ -16,7 +16,7 @@ body, p {
     margin: 0;
 }
 
-ul {
+#menu {
     margin-top: 0;
     margin-bottom: 0;
     display: flex;
@@ -26,7 +26,7 @@ ul {
     color: white;
 }
 
-li {
+.header_menu {
     cursor: pointer;
     padding-top: 30px;
 }
