--- a/css/body.css
+++ b/css/body.css
@@ -23,8 +23,16 @@
 #slider {
     width: 1170px;
     height: 660px;
+}
+
+#slider_image {
+    padding-top: 56.41%;
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+
     border-radius: 15px;
-    display: inline-block;
     transition: all 0.5s ease-out;
     margin: 60px 0;
 }
@@ -39,7 +47,7 @@
 }
 
 #topics {
-    background-image: url("../accets/images/header_background_01.png");
+    background-image: url("../accets/images/header_background_01.jpg");
 }
 
 .headline {
@@ -58,7 +66,7 @@
 
 #best_games_section {
     background-image: url("../accets/body/background_main_body.png");
-    display: inline-flex;
+    display: flex;
     margin: 0 auto;
     padding: 20px 200px;
     flex-wrap: wrap;
@@ -98,7 +106,7 @@
 }
 
 .footer {
-    background-image: url("../accets/images/header_background_01.png");
+    background-image: url("../accets/images/header_background_01.jpg");
 }
 
 .info {
@@ -119,14 +127,41 @@ div#games_body {
 }
 
 div#games_section {
-    display: inline-flex;
+    display: flex;
     margin: 0 auto;
     padding: 0 60px;
     flex-wrap: wrap;
-    /*Св-во wrap отвечает за отображение элементов внутри флекс блока*/
     justify-content: center;
     align-items: center;
 }
+
+#buttons_games_genre {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.buttons_genre {
+    display: inline-block;
+    min-width: 150px;
+    max-width: 350px;
+    margin: 5px;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    color: white;
+    background-color: #2c2d37;
+    padding: 10px;
+    outline: none;
+    border: 2px solid #2c2d37;
+    border-radius: 1px;
+    transition: 0.2s;
+}
+
+.buttons_genre:hover, .buttons_genre:focus, .buttons_genre:focus:hover {
+    background-color: #e9b606;
+    color: black;
+}
+
 
 .games_catalog {
     position: relative;
@@ -183,6 +218,9 @@ div#games_section {
 .price_line {
     float: left;
     margin: 3px 10px 0 0;
+    width: 5px;
+    height: 70px;
+    background: red;
 }
 
 .games_text_old_price {
@@ -191,7 +229,7 @@ div#games_section {
     font-size: 27px;
     color: #807f80;
     text-decoration: line-through;
-    margin-top: 5px;
+    margin-top: 3px;
 }
 
 .games_text_price {
@@ -529,4 +567,11 @@ div#faq_body {
     padding-left: 15px;
     font-family: "Roboto", sans-serif;
     font-size: 17px;
+}
+
+.footer_line {
+    width: 5px;
+    height: 50px;
+    background: white;
+    margin: 10px 20px;
 }
