--- a/css/order.css
+++ b/css/order.css
@@ -153,7 +153,7 @@ div#card_body {
     text-align: right;
 }
 
-.button_order_checkout {
+#button_order_checkout {
     font-family: "Roboto Medium", sans-serif;
     font-size: 18px;
     color: white;
@@ -165,6 +165,6 @@ div#card_body {
     transition: 0.2s;
 }
 
-.button_order_checkout:hover {
+#button_order_checkout:hover {
     background-color: #44556f;
 }
