--- a/css/body.css
+++ b/css/body.css
@@ -1,51 +1,3 @@
-#slide {
-    /*width: 1920px;*/
-    height: 815px;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-}
-
-#main_body {
-    background-image: url("../accets/background/back slider.png");
-}
-
-
-.left {
-    background-image: url("../accets/slider/arrow_left.png");
-    width: 96px;
-    height: 96px;
-    display: inline-block;
-    align-self: center;
-    margin: 0 30px;
-}
-
-#slider {
-    width: 1170px;
-    height: 660px;
-}
-
-#slider_image {
-    padding-top: 56.41%;
-    display: block;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-
-    border-radius: 15px;
-    transition: all 0.5s ease-out;
-    margin: 60px 0;
-}
-
-.right {
-    background-image: url("../accets/slider/arrow_right.png");
-    width: 96px;
-    height: 96px;
-    display: inline-block;
-    align-self: center;
-    margin: 0 30px;
-}
-
 #topics {
     background-image: url("../accets/images/header_background_01.jpg");
 }
@@ -64,52 +16,12 @@
     color: red;
 }
 
-#best_games_section {
-    background-image: url("../accets/body/background_main_body.png");
-    display: flex;
-    margin: 0 auto;
-    padding: 20px 200px;
-    flex-wrap: wrap;
-    /*Св-во wrap отвечает за отображение элементов внутри флекс блока*/
-    justify-content: center;
-    align-items: center;
-}
-
-.best_games_catalog {
-    position: relative;
-    width: 360px;
-    height: 430px;
-    background-color: #2c2d37;
-    margin: 20px;
-    text-align: center;
-}
-
-.img_best_games {
-    display: block;
-    margin: 25px auto 5px;
-}
-
-.best_games_text {
-    margin: 0 auto;
-    display: inline-flex;
-    vertical-align: middle;
-}
-
-.best_games_text p{
-    color: white;
-    text-transform: uppercase;
-    font-family: Roboto, sans-serif;
-    font-size: 33px;
-    padding-top: 23px;
-    margin: 0 15px;
-    text-shadow: 1px 1px 2px black;
-}
-
+/*Footer*/
 .footer {
     background-image: url("../accets/images/header_background_01.jpg");
 }
 
-.info {
+.footer_info {
     display: flex;
     color: white;
     font-family: Roboto, sans-serif;
@@ -118,455 +30,6 @@
     text-shadow: 2px 2px 3px black;
     justify-content: center;
     align-items: center;
-}
-
-div#games_body {
-    background-image: url("../accets/background/body_games.png");
-    padding: 10px 0;
-    position: relative;
-}
-
-div#games_section {
-    display: flex;
-    margin: 0 auto;
-    padding: 0 60px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-#buttons_games_genre {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.buttons_genre {
-    display: inline-block;
-    min-width: 150px;
-    max-width: 350px;
-    margin: 5px;
-    font-family: "Roboto", sans-serif;
-    font-size: 15px;
-    color: white;
-    background-color: #2c2d37;
-    padding: 10px;
-    outline: none;
-    border: 2px solid #2c2d37;
-    border-radius: 1px;
-    transition: 0.2s;
-}
-
-.buttons_genre:hover, .buttons_genre:focus, .buttons_genre:focus:hover {
-    background-color: #e9b606;
-    color: black;
-}
-
-
-.games_catalog {
-    position: relative;
-/*    width: 386px;*/
-    width: 360px;
-/*    height: 644px;*/
-    height: 600px;
-    background-color: #2c2d37;
-    margin: 20px 5px;
-    text-align: center;
-}
-
-.game_image_block{
-    position: relative;
-    display: inline-block;
-}
-
-.game_image_block::after {
-    display: block;
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0 -30px 30px 0 #2c2d37;
-    -webkit-box-shadow: inset 0 -30px 30px 0 #2c2d37;
-    -moz-box-shadow: inset 0 -30px 30px 0 #2c2d37;
-}
-.img_all_games {
-    display: block;
-    margin: 5px auto 0;
-}
-
-.games_text {
-    position: absolute;
-    bottom: 75px;
-    left: 15px;
-    display: inline-block;
-    color: white;
-    text-shadow: 1px 1px 2px black;
-    text-align: left;
-    width: 310px;
-    padding: 0 10px 5px 10px;
-}
-
-.games_text_headline {
-    font-size: 25px;
-    font-family: "Roboto Medium", sans-serif;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-.price_line {
-    float: left;
-    margin: 3px 10px 0 0;
-    width: 5px;
-    height: 70px;
-    background: red;
-}
-
-.games_text_old_price {
-    display: inline-block;
-    font-family: "Roboto Medium", sans-serif;
-    font-size: 27px;
-    color: #807f80;
-    text-decoration: line-through;
-    margin-top: 3px;
-}
-
-.games_text_price {
-    display: block;
-    font-family: "Roboto Medium", sans-serif;
-    font-size: 27px;
-    margin: 5px 0 10px 0;
-}
-
-.games_text_discount {
-    display: inline-block;
-    margin-left: 25px;
-    font-family: "Roboto", sans-serif;
-    font-size: 27px;
-    color: #c99d11;
-}
-
-.games_text_description {
-    display: block;
-    font-size: 17px;
-    font-family: "Roboto", sans-serif;
-    color: #807f80;
-}
-
-.games_text_new_price {
-     margin: 25px 0 25px 0;
-     font-family: "Roboto Medium", sans-serif;
-     font-size: 28px;
- }
-
-
-.games_text_description_no_sale {
-    font-size: 17px;
-    font-family: "Roboto", sans-serif;
-    color: #807f80;
-}
-
-.games_buttons {
-    position: absolute;
-    bottom: 0;
-    left: 60px;
-    display: block;
-    margin: 10px auto;
-    text-align: center;
-}
-
-.games_button_info, .games_button_buy{
-    display: inline-block;
-    margin: 8px;
-    font-family: "Roboto Medium", sans-serif;
-    font-size: 18px;
-    color: white;
-    background-color: transparent;
-    padding: 7px 30px;
-    outline: none;
-    border: 2px solid white;
-    border-radius: 1px;
-    transition: 0.2s;
-}
-.games_button_info:hover, .games_button_buy:hover {
-    border: 2px solid #e9b606;
-    color: #e9b606;
-}
-
-.games_button_buy {
-    padding: 7px 33px;
-}
-
-.block_video_review {
-    background-color: rgb(44, 45, 55);
-    max-width: 1000px;
-    max-height: 320px;
-    min-width: 650px;
-    margin: 20px auto;
-    display: flex;
-    align-items: center;
-    /*justify-content: center;*/
-}
-
-.video {
-    box-shadow: 0 0 10px black;
-    min-width: 400px;
-}
-
-.block_video_text {
-    margin: auto 70px;
-    width: 450px;
-    /*height: 400px;*/
-    min-width: 150px;
-    font-size: 25px;
-    font-family: "Roboto Medium", sans-serif;
-    color: white;
-}
-
-.headline_video {
-
-}
-
-.text_yellow {
-    color: #e9b606;
-}
-
-.video_description_line {
-    margin-bottom: 20px;
-}
-
-.video_description {
-    font-size: 18px;
-    font-family: "Roboto", sans-serif;
-    color: #807f80;
-}
-
-div#faq_body {
-    background-image: url("../accets/background/body_games.png");
-    padding: 10px 0;
-    position: relative;
-    min-height: 750px;
-}
-
-#form_for_search {
-    position: relative;
-    width: 720px;
-    height: 60px;
-    margin: 30px auto;
-}
-#search_input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    border: 2px solid gray;
-    border-radius: 5px 0 0 5px;
-    background: aliceblue;
-    width: 515px;
-    height: 53px;
-    padding-left: 10px;
-    font-size: 23px;
-    font-family: "Roboto", sans-serif;
-}
-
-#button_search {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 0;
-    width: 180px;
-    height: 58px;
-    color: white;
-    border: 0;
-    margin: 0;
-    background: #2e2b2f;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-    font-size: 23px;
-    font-family: "Roboto Medium", sans-serif;
-}
-
-#button_for_turn_back img{
-    position: absolute;
-    left: 495px;
-    width: 25px;
-    height: 25px;
-    margin: auto 0;
-    top: 18px;
-
-}
-
-#button_search_items {
-    display: flex;
-    justify-content: center;
-}
-
-#img_search {
-    padding-right: 10px;
-}
-
-#faq_questions {
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    opacity: 0.9;
-    margin: 0 auto 30px auto;
-    width: 50%;
-    padding: 0 100px 15px 100px;
-}
-
-.line_question {
-    margin: 0 auto;
-    padding-top: 10px;
-    width: 100%;
-}
-
-.question {
-    font-size: 25px;
-    font-family: "Roboto Medium", sans-serif;;
-    color: rgb(44, 45, 55);
-    line-height: 1.2;
-    text-align: left;
-    margin: 20px 0;
-}
-
-.answer {
-    font-size: 18px;
-    font-family: "Roboto", sans-serif;;
-    color: rgb(44, 45, 55);
-    line-height: 1.2;
-    text-align: left;
-    margin: 20px 0;
-}
-
-
-.faq_questions_text {
-    font-size: 20px;
-    font-family: "Roboto Medium", sans-serif;;
-    color: rgb(44, 45, 55);
-    line-height: 1.2;
-    text-align: left;
-    margin: 20px 0;
-    border: 1px solid #ddd;
-    background-color: #f6f6f6;
-    padding: 12px;
-    text-decoration: none;
-    display: block;
-}
-
-.faq_questions_answers p{
-    font-size: 18px;
-    font-family: "Roboto", sans-serif;;
-    color: rgb(44, 45, 55);
-    line-height: 1.2;
-    text-align: left;
-    margin: 20px 0;
-}
-
-/*
-#faq_questions div a:hover:not(.header) {
-    background-color: #eee;
-}*/
-
-#feedback_form {
-    position: relative;
-    margin: 0 auto 30px auto;
-    padding: 10px;
-    background-color: #2c2d37;
-    border-radius: 10px;
-    max-width: 550px;
-    min-width: 300px;
-}
-
-.feedback_form_text {
-    padding: 20px 0 15px 48px;
-    font-size: 20px;
-    font-family: "Roboto Medium", sans-serif;;
-    color: white;
-    display: inline-block;
-}
-
-.feedback_user_data {
-    display: block;
-    margin: 0 auto;
-    background-color: rgb(255, 255, 255);
-    height: 35px;
-    font-size: 20px;
-    font-family: "Roboto", sans-serif;
-    width: 80%;
-}
-
-.feedback_user_message {
-    display: block;
-    margin: 0 auto;
-    background-color: rgb(255, 255, 255);
-    width: 80%;
-    height: 75px;
-    font-size: 20px;
-    font-family: "Roboto", sans-serif;
-}
-
-#feedback_button {
-    display: block;
-    margin: 30px auto;
-    background: rgb(237, 28, 36);
-    width: 180px;
-    height: 50px;
-    border: 0;
-    cursor: pointer;
-}
-
-#feedback_button_text {
-    padding: 10px;
-    font-size: 22px;
-    font-family: "Roboto Medium", sans-serif;;
-    color: white;
-}
-
-.feedback_form_success {
-    position: relative;
-    margin: 0 auto 30px auto;
-    padding: 10px;
-    background-color: #2c2d37;
-    border-radius: 10px;
-    width: 650px;
-}
-
-.feedback_form_success h1{
-    padding: 10px;
-    font-size: 24px;
-    font-family: "Roboto", sans-serif;
-    color: white;
-    text-align: center;
-}
-
-.feedback_form_success h2{
-    padding: 10px;
-    font-size: 20px;
-    font-family: "Roboto Thin", sans-serif;
-    color: white;
-    text-align: center;
-}
-
-.feedback_success_image{
-    display: block;
-    margin: 10px auto;
-}
-
-.error input,
-.error textarea {
-    border: 1px solid red;
-}
-
-.error_empty {
-    display: none;
-}
-
-.error_message {
-    display: inline;
-    color: red;
-    padding-left: 15px;
-    font-family: "Roboto", sans-serif;
-    font-size: 17px;
 }
 
 .footer_line {
