--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,7 @@
+html, body {
+    min-width: 530px;
+}
+
 body, p {
     margin: 0;
 }
@@ -68,7 +72,6 @@ body, p {
         margin-top: -40px;
     }
 }
-
 
 .header_menu {
     cursor: pointer;
